--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('head', {title: 'Movie Database - Reviews'}); %>
+    <%- include('head', {title: 'Movie Database V2.0- Reviews'}); %>
   </head>
 
   <body>
